--- a/index.html
+++ b/index.html
@@ -7,18 +7,8 @@
     <title>Trabalhando com Java Script</title>
 </head>
 <body>
-    
-   <div id="futebol-brasileiro">
-     <div class="times">Corinthians</div>
-     <div class="times">União Barbarense</div>
-     <div class="times">União da Linópolis</div>
-   </div>
-    <br>
-    <script src="script.js"></script>
-   <div id="futebol-europeu">
-     <div class="times">Real Madrid</div>
-     <div class="times">Manchester City</div>
-     <div class="times">Liverpool</div>
-   </div>
- 
+
+  
+ <script src="script.js"></script>
+</body>
 </html>
