--- a/funcao-inicial-sretorno.html
+++ b/funcao-inicial-sretorno.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora-Parte2</title>
+    <title>Trabalhando com Java Script</title>
 </head>
 <body>
+
+  <label>Digite um número:</label>
+  <input type="text" id="num1">
+
+    <br>
+
+  <label>Digite outro número:</label>
+  <input type="text" id="num2">
+
+     <br>
+     
+  <button onclick="somarNumeros()">Enviar</button>
 
  <script src="script.js"></script>
 </body>
